# knowledgeforge

./: .gitignore  LICENSE  README.md  kf_config.yaml  main.py  pyproject.toml  requirements.txt  requirements_linux.txt  setup_env.sh
.claude/: settings.local.json
backend/: cli.py  test_pipeline_demo.py
backend/app/: main.py
backend/app/api/v1/: documents.py  health.py  metrics.py  workflows.py
backend/app/core/: config.py  logging.py  workflow_config.py
backend/app/db/: session.py
backend/app/metrics/: collector.py
backend/app/models/: database.py  schemas.py
backend/app/observability/: tracing.py
backend/app/services/: chunking.py  embedding.py  extraction.py  filewatcher.py  indexing.py  parsing.py  transformation.py  workflow.py  workflow_registry.py
backend/notebooks/: 01.docling_test.ipynb  02.test_pipeline_demo.ipynb
backend/tests/: test_api.py  test_chunking.py  test_config.py  test_database.py  test_e2e.py  test_embedding.py  test_extraction.py  test_filewatcher.py  test_indexing.py  test_metrics.py  test_parsing.py  test_tracing.py  test_transformation.py  test_workflow.py  test_workflow_config.py  test_workflow_registry.py
misc/: commands.txt
notebooks/: workflow_e2e_demo.ipynb  workflow_e2e_demo.py
reference/: KnowledgeForge PRD.md  KnowledgeForge Tasks.md  household_income_survey(2015).csv  task_status.md
workflows/: fund_factsheet.yaml  registry.yaml
