[project]
name = "knowledgeforge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Document processing
    "docling>=2.73.0",
    "semchunk>=2.2.2",
    "tiktoken>=0.12.0",

    # ML / Embeddings
    "torch>=2.6.0; sys_platform == 'linux'",
    "torch>=2.2.0,<=2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "sentence-transformers>=3.0.0",
    "anthropic>=0.49.0",

    # Vector store
    "chromadb>=1.4.1",

    # Web framework
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",

    # Database
    "sqlalchemy>=2.0.46",

    # Configuration & utilities
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.0",
    "pyyaml>=6.0.0",
    "watchdog>=6.0.0",

    # Observability
    "langsmith>=0.6.9",

    # Testing
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.0",

    # Notebook support
    "ipykernel>=7.2.0",

    # Image support (used in extraction)
    "pillow>=11.3.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
markers = [
    "e2e: end-to-end integration tests (slow, loads ML models)",
]
asyncio_mode = "strict"

[tool.uv]
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
]

# Allow flexible transitive dep versions for cross-platform compat
override-dependencies = [
    "opencv-python>=4.10.0,<4.12; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "onnxruntime>=1.18.0,<1.21; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "numpy<2.0; sys_platform == 'darwin' and platform_machine == 'x86_64'",
]
